--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.72.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
+    "next-sanity": "^9.8.47",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sanity": "^3.72.1",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
