--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-sanity": "^9.8.47",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^3.72.1",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
