--- a/package.json
+++ b/package.json
@@ -2,28 +2,38 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node script/importData.js"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@sanity/client": "^6.27.2",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.72.1",
+    "@sanity/vision": "^3.74.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
-    "next": "15.0.3",
-    "next-sanity": "^9.8.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sanity": "^3.72.1",
-    "styled-components": "^6.1.14",
+    "next": "^15.1.6",
+    "next-sanity": "^9.8.51",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.74.1",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
